care-australia-uat/force-app/main/default/objects/RG_Process_Value__mdt/RG_Process_Value__mdt.object-meta.xml
<CustomObject>
    <description>Store maximum Soft Fail Retry attempt value, maximum Failed Consecutive Opportunity value and number of days for creating payments in fail soft</description>
    <label>RG Process Value</label>
    <pluralLabel>RG Process Values</pluralLabel>
</CustomObject>