care-australia-uat/force-app/main/default/objects/RG_Process_Value__mdt/fields/Failed_Consecutive_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Failed_Consecutive_Opportunities__c</fullName>
    <label>Failed Consecutive Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>