care-australia-uat/force-app/main/default/objects/RG_Process_Value__mdt/fields/Next_Payment_Retry_Days__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Retry_Days__c</fullName>
    <label>Next Payment Retry Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>