care-australia-uat/force-app/main/default/objects/RG_Process_Value__mdt/fields/Payment_Limit__c.field-meta.xml
<CustomField>
    <fullName>Payment_Limit__c</fullName>
    <label>Payment Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>