care-australia-uat/force-app/main/default/objects/RG_Process_Value__mdt/fields/Retry_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempt__c</fullName>
    <label>Retry Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>